Fixing issue with with aside date on mobile

--- a/css/less/posts.format-aside.less
+++ b/css/less/posts.format-aside.less
@@ -13,7 +13,7 @@
 
   .aside-date {
     position: absolute;
-    margin: 20px 0 0 -40px;
+    margin: 20px 0 0 -20px;
     background: @post_format_aside_date_bg_color;
     width: 50px;
     height: 50px;
